hphp/test/zend/good/tests/classes/interface_must_be_implemented.php.expectf

Fatal error: Class derived_a contains abstract method (f_a) and must therefore be declared abstract or implement the remaining methods in %s/interface_must_be_implemented.php on line 7
